# atlas-weave

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/atlas-weave-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/atlas-weave-shell/src-tauri/capabilities/: main.json
apps/atlas-weave-shell/src-tauri/src/: db.rs  lib.rs  main.rs
apps/atlas-weave-shell/src-tauri/src/commands/: data.rs  files.rs  mod.rs  recipes.rs  runs.rs  schedules.rs  settings.rs
apps/atlas-weave-shell/src-tauri/src/services/: credentials.rs  event_bus.rs  mod.rs  paths.rs  recipe_registry.rs  run_manager.rs  scheduler.rs  sidecar.rs
docs/: ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  PROJECT_CONTEXT.md  REPOSITORY_STRUCTURE.md
frontend/app/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/app/src/: app.css  app.d.ts  test-setup.ts
frontend/app/src/lib/api/tauri/: data.ts  files.ts  recipes.ts  runs.ts  schedules.ts  settings.ts
frontend/app/src/lib/components/: ThemeToggle.svelte
frontend/app/src/lib/components/ui/badge/: Badge.svelte  index.ts
frontend/app/src/lib/components/ui/button/: Button.svelte  index.ts
frontend/app/src/lib/components/ui/card/: Card.svelte  CardContent.svelte  CardDescription.svelte  CardFooter.svelte  CardHeader.svelte  CardTitle.svelte
frontend/app/src/lib/components/ui/scroll-area/: ScrollArea.svelte
frontend/app/src/lib/components/ui/separator/: Separator.svelte
frontend/app/src/lib/components/ui/skeleton/: Skeleton.svelte
frontend/app/src/lib/components/ui/tabs/: Tabs.svelte  TabsContent.svelte  TabsList.svelte  TabsTrigger.svelte
frontend/app/src/lib/components/ui/tooltip/: Tooltip.svelte
frontend/app/src/lib/features/dag/: DagEdge.svelte  DagNode.svelte  DagViewer.svelte  NodeDetail.svelte  NodeLogs.svelte  NodeSummary.svelte  NodeTools.svelte  RunLogViewer.svelte  dag-layout.test.ts  dag-layout.ts
frontend/app/src/lib/features/data/: CoverageDashboard.svelte  DataBrowser.svelte  DataTable.svelte  RecordDetail.svelte
frontend/app/src/lib/features/run/: RunConfig.svelte  RunList.svelte  RunSummary.svelte
frontend/app/src/lib/features/schedule/: SchedulePanel.svelte
frontend/app/src/lib/features/settings/: Credentials.svelte  types.ts
frontend/app/src/lib/stores/: dag.test.ts  dag.ts  events.test.ts  events.ts  theme.ts
frontend/app/src/routes/: +layout.svelte  +page.svelte
frontend/app/src/routes/data/[recipe]/: +page.svelte
frontend/app/src/routes/run/[id]/: +page.svelte
frontend/app/src/routes/settings/: +page.svelte
python/: pyproject.toml
python/atlas_weave/: __init__.py  agent.py  context.py  dag.py  events.py  recipe.py  runner.py  runtime.py  tool.py
python/atlas_weave/tools/: __init__.py  http_tool.py  llm_tool.py  sqlite_tool.py  web_scrape_tool.py  web_search_tool.py
python/recipes/: __init__.py
python/recipes/satellite_enrichment/: __init__.py  constellation_templates.py  db.py  recipe.py  research_sources.py  schema.py  sources.py
python/recipes/satellite_enrichment/agents/: __init__.py  auditor.py  collector.py  merger.py  researcher.py
python/recipes/test_echo/: __init__.py  recipe.py
python/recipes/test_pipeline/: __init__.py  recipe.py
python/recipes/test_tools/: recipe.py
python/tests/: conftest.py  test_dag.py  test_events.py  test_runner.py  test_satellite_enrichment.py  test_tools.py
tests/e2e/: package-lock.json  package.json  playwright.config.ts  smoke.spec.ts
