[workspace]
resolver = "2"
members = [
    "apps/atlas-weave-shell/src-tauri",
]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
iota_stronghold = "2.1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }

[profile.dev.package.scrypt]
opt-level = 3
