[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-weave"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6"
]

[project.scripts]
atlas-weave-runner = "atlas_weave.runner:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
