[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-weave"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic>=2.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6"
]

[project.scripts]
atlas-weave-runner = "atlas_weave.runner:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.coverage.run]
source = ["atlas_weave"]

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.pytest.ini_options]
markers = [
    "external: live network-backed integration tests for real provider credentials",
]
