[package]
name = "atlas-weave-shell"
version = "0.1.0"
edition = "2021"

[package.metadata]

[package.metadata.tauri]

[lib]
name = "atlas_weave_shell_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
